tests/bad/addition.rat
/// fail: Invalid types for addition

10 + "string"
